// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaEditor renderTextAreaEditor should match snapshot 1`] = `
<div>
  <div
    className="field pb-2"
  >
    <div
      className="control"
    >
      <label
        className="label"
        htmlFor="123"
      >
        mockLabel
      </label>
      <Component
        defaultContent="1"
        hasError={false}
        onChange={[Function]}
        placeholder="mockPlaceholder"
      />
    </div>
  </div>
</div>
`;

exports[`TextAreaEditor renderTextAreaEditor should match snapshot 2`] = `
<div>
  <div
    className="field pb-2"
  >
    <div
      className="control"
    >
      <label
        className="label"
        htmlFor="123"
      >
        mockLabel
      </label>
      <Component
        hasError={false}
        onChange={[Function]}
        placeholder="mockPlaceholder"
      />
    </div>
  </div>
</div>
`;

exports[`TextAreaEditor should match a snapshot 1`] = `
<Field
  name="username"
>
  <Component />
</Field>
`;
